tests/errors/syntax/type-unclosed.fn
---
Description: Type with opening brace but no close
Expected: compile error
---

type Broken
{

type Program
{
    fn Main -> i32
    {
        return 0
    }
}
